RESOLVED FIXED212940
REGRESSION: [Safari Mojave for High Sierra] Accessing some of the featured pages on apple.com causes the webpage to crash
https://bugs.webkit.org/show_bug.cgi?id=212940
Summary REGRESSION: [Safari Mojave for High Sierra] Accessing some of the featured pa...
Dean Jackson
Reported 2020-06-08 16:42:20 PDT
Seeing crashes on apple.com when using high-performance WebGL.
Attachments
Patch (4.73 KB, patch)
2020-06-08 16:49 PDT, Dean Jackson
thorton: review+
Dean Jackson
Comment 1 2020-06-08 16:43:02 PDT
Dean Jackson
Comment 2 2020-06-08 16:49:31 PDT
Created attachment 401399 [details] Patch Note: This patch is for the safari-609-branch, so won't apply cleanly here.
Tim Horton
Comment 3 2020-06-08 16:52:02 PDT
Comment on attachment 401399 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=401399&action=review > Source/WebCore/platform/graphics/mac/SwitchingGPUClient.h:35 > + static bool hasSingleton() { return !!m_singleton; } The alternative is "singletonIfExists()" or whatever. I think we have a pattern for this.
Dean Jackson
Comment 4 2020-06-08 17:02:37 PDT
Comment on attachment 401399 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=401399&action=review >> Source/WebCore/platform/graphics/mac/SwitchingGPUClient.h:35 >> + static bool hasSingleton() { return !!m_singleton; } > > The alternative is "singletonIfExists()" or whatever. I think we have a pattern for this. I'll do that on trunk. Thanks.
Dean Jackson
Comment 5 2020-06-09 01:51:01 PDT
Dean Jackson
Comment 6 2020-06-09 14:20:08 PDT
Note You need to log in before you can comment on or make changes to this bug.